corpus/output.txt
===================================
Output variable
===================================

{$test}

-----------------------------------

(template
  (tag
    (variable))
  (content))

===================================
Output variable with filter
===================================

{$test|implode:'.',true|noescape}

-----------------------------------

(template
  (tag
    (variable)
    (filters
      (filter
        (filter_identifier)
        (arguments
          (argument
            (string))
          (argument
            (boolean))))
      (filter
        (filter_identifier))))
